--- a/package.json
+++ b/package.json
@@ -9,17 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@prisma/client": "6.12.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.83.0",
+    "@trpc/client": "^11.4.3",
+    "@trpc/react-query": "^11.4.3",
+    "@trpc/server": "^11.4.3",
+    "@uploadthing/react": "^7.3.2",
     "appwrite": "^18.1.1",
+    "canvas": "^3.1.2",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
+    "next-themes": "^0.4.6",
+    "node-appwrite": "^17.1.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.60.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-pdf": "9.2.1",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.3.1"
+    "react-resize-detector": "^12.1.0",
+    "server-only": "^0.0.1",
+    "simplebar-react": "^3.3.2",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
+    "uploadthing": "^7.7.3",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +56,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "prisma": "6.12.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
